modules/sidebar.css
/* -------------------------- */
/* STATIC URL BAR (normal) */
/* -------------------------- */
#urlbar:not([breakout-extend="true"]) {
  border: 2px solid currentColor !important;
  border-radius: 10px !important;

  box-shadow: 4px 4px 0px currentColor !important;

  transition: transform 0.1s ease,
              box-shadow 0.1s ease !important;
}


#urlbar:not([breakout-extend="true"]):active {
  transform: translate(4px, 4px) !important;
  box-shadow: 0px 0px 0px currentColor !important;
}   

/* -------------------------- */
/* TABS AND ESSENTIALS */
/* -------------------------- */

/* Reset previous styling */
tab[zen-essential="true"],
tab[pinned="true"] {
  border: none !important;
  box-shadow: none !important;
  transform: none !important;
  border-radius: 12px !important;
}

tab[zen-essential="true"] .tab-background:before{
  display: none !important;
}

tab[zen-essential="true"] .tab-background:after{
/*   background: var(--tab-selected-bgcolor) !important; */
  opacity: 0.5 !important;
}


/* Style actual visible tab surface */
tab[zen-essential="true"] .tab-background,
tab[pinned="true"] .tab-background {
  border: 2px solid currentColor !important;
  border-radius: 12px !important;
  box-shadow: 4px 4px 0px currentColor !important;
  transition: transform 0.1s ease,
              box-shadow 0.1s ease !important;
}


/* Prevent overlap between pinned tabs */
tab:not([zen-essential="true"])[pinned="true"]{
  margin-bottom: 4px !important;
}


/* Push click effect */
tab[zen-essential="true"]:active .tab-background,
tab[pinned="true"]:active .tab-background {
  transform: translate(4px, 4px) !important;
  box-shadow: 0px 0px 0px currentColor !important;
}


/* Active tab pressed state */
tab[selected="true"] .tab-background {
  transform: translate(2px, 2px) !important;
  box-shadow: 1px 1px 0px currentColor !important;
}

/* Move favicon + label together */
tab[pinned="true"][selected="true"] .tab-icon-stack,
tab[pinned="true"][selected="true"] .tab-label-container,
tab[pinned="true"][selected="true"] .tab-reset-button{
  transform: translate(2px, 2px) !important;
}

tab[pinned="true"][zen-pinned-changed="true"]:not([zen-essential="true"])[selected="true"] .tab-icon-stack{
  transform: translate(5px, -5px) !important;
}


tab[pinned="true"][zen-pinned-changed="true"]:not([zen-essential="true"])[selected="true"] .tab-content .tab-reset-pin-button{
  transform: translate(2px, 2px) !important;
}



/* -------------------------- */
/* NORMAL TABS */
/* -------------------------- */
tab:not([pinned="true"]):not([zen-essential="true"]) .tab-background {
  border: 2px solid currentColor !important;
  border-radius: 10px !important;
  box-shadow: 3px 3px 0px currentColor !important;
  transition: transform 0.1s ease,
              box-shadow 0.1s ease !important;
  margin-bottom: 4px !important;
}

/* Click */
tab:not([pinned="true"]):not([zen-essential="true"]):active .tab-background {
  transform: translate(3px, 3px) !important;
  box-shadow: 0px 0px 0px currentColor !important;
}


/* Selected tab */
tab:not([pinned="true"]):not([zen-essential="true"])[selected="true"] .tab-background {
  transform: translate(2px, 2px) !important;
  box-shadow: 1px 1px 0px currentColor !important;
  border-radius: 10px !important;
}


/* Move favicon/text slightly when selected */
tab:not([pinned="true"]):not([zen-essential="true"])[selected="true"] .tab-content {
  transform: translate(2px, 2px) !important;
}

/* -------------------------- */
/* FOLDER LABEL (closed state) */
/* -------------------------- */

zen-folder[collapsed]{
  border-radius: 12px !important;
  transition: background 0.15s ease-in-out !important;
  padding-inline: 3px !important;
}

zen-folder[collapsed] .tab-group-label-container{
  border: 2px solid currentColor !important;
  border-radius: 12px !important;
  box-shadow: 4px 4px 0px currentColor !important;
  transition: transform 0.1s ease !important;
  margin-bottom: 4px !important;
  background: color-mix(
    in srgb,
    var(--zen-primary-color) 60%,
    #fff1d6 40%
  ) !important;
}


/* Click press effect */
zen-folder[collapsed] .tab-group-label-container:active {
  transform: translate(4px, 4px) !important;
  box-shadow: 0px 0px 0px currentColor !important;
}


/* -------------------------- */
/* OPEN FOLDER LABEL */
/* stays pressed */
/* -------------------------- */
zen-folder:not([collapsed]) .tab-group-label-container {
  border: 2px solid currentColor !important;
  border-radius: 12px !important;
  transform: translate(2px, 2px) !important;
  box-shadow: 1px 1px 0px currentColor !important;
}

zen-folder:not([collapsed]) .tab-group-label-container > .tab-group-folder-icon{
  transform: translate(2px, 2px) !important;
}

zen-folder:not([collapsed]) .tab-group-container {
  margin-top: 4px !important;
}

/* Move folder content with pressed state */
zen-folder:not([collapsed]) .tab-group-label {
  transform: translate(2px, 2px) !important;
}

zen-folder:not([collapsed]) {
  border-radius: 16px !important;
/*   border: 2px solid currentColor !important;
  box-shadow: 2px 2px 0px currentColor !important; */
  padding-right: 4px !important;
  margin-bottom: 2px !important;
}

/* -------------------------- */
/* NEW TAB BUTTON */
/* -------------------------- */
#tabs-newtab-button {
  border: 2px solid currentColor !important;
  border-radius: 12px !important;
  box-shadow: 4px 4px 0px currentColor !important;
  transition: transform 0.1s ease !important;
  margin-bottom: 4px !important;
}

#tabs-newtab-button .toolbarbutton-icon{
  transform: rotate(0deg) !important;
  transition: transform 0.4s ease-in-out !important;
}

#tabs-newtab-button[in-urlbar="true"] .toolbarbutton-icon{
  transform: rotate(225deg) !important;
  transition: transform 0.25s ease-in-out !important;
}

/* Click press effect */
#tabs-newtab-button[in-urlbar="true"] {
  transform: translate(3px, 3px) !important;
  box-shadow: 0px 0px 0px currentColor !important;
}

/* -------------------------- */
/* sidebar buttons */
/* -------------------------- */

@media (-moz-pref("mac.navbuttons.disabled")) {
  #zen-sidebar-top-buttons #back-button,
  #zen-sidebar-top-buttons #forward-button {
    display: none !important;
  }
}


/* -------------------------- */
/* compact sidebar */
/* -------------------------- */

:root[zen-compact-mode="true"] #titlebar {
  border: 2px solid currentColor !important;
  box-shadow: 4px 4px 0 currentColor !important;
  border-radius: var(--zen-border-radius) !important;

  margin: 16px !important;
  overflow: hidden !important;

  transition:
    transform 0.12s ease,
    box-shadow 0.12s ease !important;
}

:root[zen-compact-mode="true"] #titlebar:hover {
  box-shadow: 1px 1px 0 currentColor !important;
  transform: translate(3px, 3px) !important;
}

/* move urlbar when titlebar hovered */
:root[zen-compact-mode="true"]:has(#titlebar:hover) #urlbar {
  transform: translate(3px, 3px) !important;
  transition: transform 0.12s ease !important;
}

/* MINI PLAYER */

#zen-media-controls-toolbar .show-on-hover {
    max-height: 50px !important;
    padding: 5px !important;
    margin-bottom: 0 !important;
    opacity: 1 !important;
    transform: translateY(0) !important;
    pointer-events: auto !important;
}

#zen-media-controls-toolbar{
  border: 2px solid currentColor !important;
  border-radius: 14px !important;
  overflow: hidden !important;
  padding: 8px !important;
  margin-inline: 6px !important;
  background: var(--zen-primary-color) !important;
}

#zen-media-controls-toolbar {
  box-shadow: 1px 1px 0 currentColor !important;
  transform: translate(2px, 2px) !important;
  transition:
    transform 0.12s ease,
    box-shadow 0.12s ease !important;
}

#zen-media-controls-toolbar.playing {
  box-shadow: 3px 3px 0 currentColor !important;
  transform: translate(0px, 0px) !important;
}

#zen-media-close-button {
  opacity: 0 !important;
  pointer-events: none !important;

  transition: opacity 0.12s ease !important;
}

#zen-media-controls-toolbar:hover #zen-media-close-button {
  opacity: 1 !important;
  pointer-events: auto !important;
}

#zen-media-progress-bar{
  --progress-height: 8px !important;
}

#zen-media-controls-hbox {
  justify-content: center !important;
}

#zen-media-mute-button {
  display: none !important;
}

